# routes/customers.js
@@ -6,7 +6,7 @@ customers.get('/', customersController.listAllCustomers);
 customers.post('/writeNewCustomer/', customersController.writeNewCustomer);
 customers.put('/updateCustomer/:id', customersController.updateCustomer);
 customers.delete('/deleteCustomer/:id', customersController.deleteCustomer);
-//customers.patch('/lastOrderDate/:id', customersController.lastOrderDate);
+customers.patch('/lastOrderDate/:id', customersController.lastOrderDate);
 
 
 module.exports = customers;
